fix(ui): modal-license y modal-privacy ahora con position fixed y z-index

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -658,7 +658,9 @@ h2 {
 /* --- MODALES --- */
 
 #modal-fiesta,
-#modal-lectura {
+#modal-lectura,
+#modal-license,
+#modal-privacy {
     position: fixed !important;
     top: 0 !important;
     left: 0 !important;
